fixed the code blocks issue of having too much space at bottom

--- a/write/public/css/markdown.css
+++ b/write/public/css/markdown.css
@@ -64,6 +64,9 @@ pre {
     padding: 0px 24px;
     max-width: 800px;
     white-space: pre-wrap;
+    
+    /* To remove the weird space at the bottom */
+    margin-bottom: -20px;
 }
 code {
     font-family: Consolas, Monaco, Andale Mono, monospace;
